# thinkingbox-training

./: .gitignore  MISSING.md  README.md  RECOVERY_NOTES.md  config_training.yaml  pyproject.toml  requirements.txt
data/: train_list.yaml
data/dataset_2603_sandbox_rl_zendesk/: README.md  testlist_2603_sandbox_rl_zendesk.yaml
scripts/: demo_rollout.py  prepare_run.sh  smoke_test.sh  start_servers.sh  start_train_ddp.sh  start_vllm.sh  test_lora_sync.py  test_rl_loss.py  test_tokenize.py
train/: __init__.py  checkpoint.py  data_pipeline.py  eval_loop.py  lora_sync.py  patches.py  rewards.py  rl_loss.py  rollout.py  tokenize_chat.py  train.py  wandb_logger.py
train/tests/: test_checkpoint.py
